# Some-Tasks-and-Games

./: README.md
Largest_ID/Problem_5/Process/: Process.h
Largest_ID/Problem_5/TaskList/: TaskList.cpp
Task_1/Largest_ID/Problem_3/: file.txt  main.cpp
Task_1/Largest_ID/Problem_5/: CMakeLists.txt  main.cpp
Task_1/Largest_ID/Problem_6/: CMakeLists.txt  Universe.cpp  Universe.h  file.txt  main.cpp
Task_1/Mid_ID/Problem_2/: CMakeLists.txt  file1.txt  file2.txt  problem_2.cpp
Task_1/Mid_ID/Problem_3/: CMakeLists.txt  main.cpp
Task_1/Mid_ID/Problem_4/: CMakeLists.txt
Task_1/Mid_ID/Problem_5/: CMakeLists.txt  problem_5.cpp
Task_1/Smallest_ID/Problem_1/: CMakeLists.txt  main.cpp
Task_2/: A2_S23_20231109_20230280_20230064.docx  CMakeLists.txt  New_tic_tac_toe_9x9.cpp  New_tic_tac_toe_9x9.h  Tic_Tac_Toe_3x3.h  UI.cpp  UI.h  main.cpp  test_3.cpp
Task_2/Games/Game_1/: pyramic_Tic.cpp  pyramic_Tic.h
Task_2/Games/Game_2/: Four_in_a_row.cpp  Four_in_a_row.h  test1.cpp
Task_2/Games/Game_3/: TicTacToc_Size5.cpp  TicTacToc_Size5.h
Task_2/Games/Game_4/: word_tic.cpp  word_tic.h
Task_2/Games/Game_5/: Math_Tic_Tac_Teo.cpp  Math_Tic_Tac_Teo.h  test2.cpp
Task_2/Games/Game_6/: MisereTicTacToc.cpp  MisereTicTacToc.h
Task_2/Games/Game_7/: TIcTacTocSize4.cpp  TIcTacTocSize4.h  TicTacTocSize4.cpp  TicTacTocSize4.h
Task_2/Games/Game_8/: New_tic_tac_toe_9x9.cpp  New_tic_tac_toe_9x9.h  Tic_Tac_Toe_3x3.cpp  Tic_Tac_Toe_3x3.h  Tic_Tac_Toe_9x9.cpp  Tic_Tac_Toe_9x9.h  Tic_Tactoe_9x9.cpp  test_3.cpp
Task_2/src/: BoardGame_Classes.h
(+5 files in other folders)
